cartapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartapi-deployment
  labels:
    app: cartapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cartapi
  template:
    metadata:
      labels:
        app: cartapi
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      terminationGracePeriodSeconds: 30
      containers:
        - name: cartapi
          image: dawid064/cartapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cartapi-service
spec:
  type: ClusterIP   
  selector:
    app: cartapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
