gatewayapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi-deployment
  labels:
    app: gatewayapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayapi
  template:
    metadata:
      labels:
        app: gatewayapi
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
      - name: gatewayapi
        image: dawid064/gatewayapi:latest
        ports:
        - containerPort: 8080   
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayapi-service
spec:
  selector:
    app: gatewayapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
