gatewayapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayapi-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatewayapi-service
                port:
                  number: 8080
